--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
+    "formidable": "^3.5.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
